add_executable (cardgame cardgame.cpp)
target_link_libraries (cardgame cgicc)

add_executable (cookie cookie.cpp)
target_link_libraries (cookie cgicc)

add_executable (dns dns.cpp)
target_link_libraries (dns cgicc)

add_executable (test test.cpp)
target_link_libraries (test cgicc)

add_executable (upload upload.cpp)
target_link_libraries (upload cgicc)