dnl -*-m4-*-
dnl $Id: configure.in,v 1.1 2000/11/14 05:42:03 sbooth Exp $

dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Revision: 1.1 $)
AC_INIT(example.cpp)
AM_INIT_AUTOMAKE(cgicc-example, 0.1)

AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Info on installed cgicc
AC_ARG_WITH(cgicc,
	[  --with-cgicc=DIR        use cgicc installation in DIR],
	[case "${withval}" in
		yes | no) AC_MSG_ERROR(bad value ${withval} for --with-cgicc);;
		*) cgicc_prefix=${withval} ;;
		esac])

dnl Perform some sanity checks on the cgicc installation
CGICC_CHECK_INSTALLATION($cgicc_prefix)

dnl Output files
AC_OUTPUT(Makefile)
