## $Id: Makefile.am,v 1.1 1999/04/26 22:48:09 sbooth Exp $

CLEANFILES = *~

info_TEXINFOS = cgicc.texinfo
cgicc_TEXINFOS = gpl.texinfo cgi-overview.texinfo tutorial.texinfo \
library-overview.texinfo cgi-classes.texinfo \
http-classes.texinfo html-classes.texinfo \
class-cgicc.texinfo class-cgienv.texinfo class-formentry.texinfo \
class-formfile.texinfo classes-http.texinfo classes-html.texinfo \
concept-index.texinfo function-index.texinfo datatype-index.texinfo
