## $Id: Makefile.am,v 1.2 1999/06/01 21:19:34 sbooth Exp $

CLEANFILES = *~

info_TEXINFOS = cgicc.texinfo
cgicc_TEXINFOS = gpl.texinfo cgi-overview.texinfo tutorial.texinfo	\
library-overview.texinfo cgi-classes.texinfo http-classes.texinfo	\
html-classes.texinfo class-cgicc.texinfo class-cgienv.texinfo		\
class-formentry.texinfo class-formfile.texinfo classes-http.texinfo	\
classes-html.texinfo reporting-bugs.texinfo concept-index.texinfo	\
function-index.texinfo datatype-index.texinfo
